# Chatufs

./: .gitignore  README.md  app.py  main.py  ppc.md  pyproject.toml  test_rag.py
documents/: 105152_-_MAT0078_-_ÁLGEBRA_LINEAR_I_-_60h.md  105171_-_MAT0096_-_CÁLCULO_NUMÉRICO_I_-_60h.md  105223_-_MAT0118_-_ALGEBRA_LINEAR_COMPUTACIONAL_-_60h.md  105226_-_MAT0125_-_INTRODUCAO_A_TEORIA_DOS_JOGOS_-_60h.md  108021_-_ESTAT0011_-_ESTATISTICA_APLICADA_-_60h.md  108142_-_ESTAT0070_-_ANÁLISE_EXPLORATÓRIA_DE_DADOS_-_60h.md  108152_-_ESTAT0072_-_PROBABILIDADE_I_-_60h.md  301011_-_ADM0002_-_INTRODUCAO_A_ADMINISTRACAO_-_60h.md  302515_-_DIRE0323_-_DIREITO_E_LEGISLAÇÃO_SOCIAL_-_60h.md  404849_-_LETR0429_-_INGLÊS_INSTRUMENTAL_-_60h.md  407031_-_FILO0018_-_INTRODUCAO_A_FILOSOFIA_-_60h.md  COMP0334_-_PROGRAMAÇÃO_IMPERATIVA_-_60h.md  COMP0393_-_PROGRAMAÇÃO_FUNCIONAL_-_60h.md  COMP0415_-_ARQUITETURA_DE_COMPUTADORES_-_60h.md  COMP0461_-_REDES_DE_COMPUTADORES_-_60h.md  COMP0481_-_MÉTODOS_E_TÉCNICAS_DE_PESQUISA_PARA_COMPUTAÇÃO_-_30h.md  EPROD0087_-_INTRODUÇÃO_E_LABORATÓRIO_DE_PROPRIEDADE_INTELECTUAL_-_60h.md  FISI0260_-_FISICA_1_-_60h.md  FISI0262_-_FISICA_3_-_60h.md  FISI0264_-_LABORATORIO_DE_FISICA_1_-_30h.md  LETRL0034_-_LÍNGUA_BRASILEIRA_DE_SINAIS_-_LIBRAS_-_60h.md  MAT0057_-_FUNDAMENTOS_ELEMENTARES_DA_MATEMÁTICA_-_60h.md  MAT0150_-_VETORES_E_GEOMETRIA_ANALÍTICA_-_60h.md  MAT0151_-_CÁLCULO_A_-_60h.md  MAT0152_-_CÁLCULO_B_-_60h.md  MAT0153_-_CÁLCULO_C_-_60h.md  grade_curricular_principal.md  ufs_info.txt
src/: bot.py  pdf_vec.py  rag.py  ufs_crawler.py
